--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <title>Bigfoot Sightings </title>
 </head>
 <body>
+    <h1>Title</h1>
     <div id="plot"></div>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="{{ url_for('static', filename='js/app.js') }}"></script>
